add terminal news feed
